<resources>
    <string name="app_name">InterShopping</string>
    <string name="list">List</string>
    <string name="supermarkets">Supermarkets</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="help_us">Help us!</string>
    <string name="tell_friend">Tell a friend</string>
    <string name="rate">Rate</string>
    <string name="menu">Menu</string>
    <string name="new_item">New Item...</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="new_sm_name">Name</string>
    <string name="new_sm_address">Address</string>
    <string name="new_sm_note">Notes</string>
    <string name="stats">Stats</string>
    <string name="sync">Language Sync</string>
    <string name="price">Price</string>
    <string name="skip">Skip</string>
    <string name="ok">Ok</string>
    <string name="enter_price">Enter price</string>
    <string name="price_eur">%1$.2f€</string>
    <string name="num_bought_total">%1$d/%2$d</string>
    <string name="name_translation">%1$s / %2$s</string>
    <string name="quantity">Quantity</string>
    <string name="unit">unit</string>
    <string name="uno">1</string>
    <string name="product">Product:</string>
    <string name="no_results">No results...</string>
    <string name="search_icon">Search icon</string>
    <string name="sc">Shopping cart</string>
    <string name="desc_comparison">Find where you bought a product with the lowest price and compare the average prices of all the supermarkets.</string>
    <string name="calendar">calendar</string>
    <string name="address">Address</string>
    <string name="notes">Notes</string>
</resources>
