<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <Item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/home"
            android:checked="true" />
        <Item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_forum"
            android:title="@string/help" />
    </group>

    <Item android:title="@string/help_us">
        <menu>
            <Item
                android:icon="@drawable/ic_dashboard"
                android:title="@string/rate" />
            <Item
                android:icon="@drawable/ic_forum"
                android:title="@string/tell_friend" />
        </menu>
    </Item>
</menu>
