<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <!-- ActionBar -->
            <include layout="@layout/action_bar" />

        </android.support.design.widget.AppBarLayout>

        <!-- Body  -->
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <include layout="@layout/list_shopping_lists_item"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/cv"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/price_modal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#88676767"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <RelativeLayout
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/label1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/price"
                        android:text="@string/enter_price"
                        android:textColor="@color/primary_text"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/price"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label1"
                        android:inputType="number"
                        android:maxWidth="100dp"
                        android:singleLine="true"/>

                    <Spinner
                        android:id="@+id/price_type"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/price"
                        android:layout_below="@id/label1"
                        android:layout_toRightOf="@+id/price"
                        android:spinnerMode="dropdown"/>

                    <View
                        android:id="@+id/separator1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/price"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:id="@+id/label2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/separator1"
                        android:labelFor="@+id/quantity"
                        android:text="@string/quantity"
                        android:textColor="@color/primary_text"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/quantity"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label2"
                        android:inputType="number"
                        android:maxWidth="100dp"
                        android:singleLine="true"
                        android:text="@string/uno"/>

                    <TextView
                        android:id="@+id/label3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/quantity"
                        android:layout_below="@id/label2"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/quantity"
                        android:text="@string/unit"
                        android:textColor="@color/primary_text"
                        android:textSize="17sp"/>

                    <Button
                        android:id="@+id/ok_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/quantity"
                        android:text="@string/ok"/>

                    <Button
                        android:id="@+id/skip_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/quantity"
                        android:layout_marginRight="5dp"
                        android:text="@string/skip"/>

                </RelativeLayout>
            </RelativeLayout>
        </FrameLayout>


    </android.support.design.widget.CoordinatorLayout>

    <!-- Navigation drawer (menu) that comes from the left -->
    <include layout="@layout/left_menu" />

</android.support.v4.widget.DrawerLayout>