<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <!-- ActionBar -->
            <include layout="@layout/action_bar"/>

        </android.support.design.widget.AppBarLayout>

        <!-- Body  -->
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/crl_calendar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/calendar"
                android:src="@drawable/ic_calendar_24"/>

            <TextView
                android:id="@+id/datefield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/crl_calendar_icon"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/crl_calendar_icon"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <ImageView
                android:id="@+id/crl_supermarket_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator1"
                android:contentDescription="@string/supermarkets"
                android:src="@drawable/ic_shopping_cart_24"/>

            <Spinner
                android:id="@+id/supermarkedspinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/separator1"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/crl_supermarket_icon"/>

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/supermarkedspinner"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <EditText
                android:id="@+id/itemfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/separator2"
                android:layout_toStartOf="@+id/addbtn"
                android:hint="@string/new_item"
                android:singleLine="true"/>

            <Button
                android:id="@+id/addbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/separator2"
                android:text="@string/add"/>

            <ListView
                android:id="@+id/addedlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemfield"/>
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <!-- Navigation drawer (menu) that comes from the left -->
    <include layout="@layout/left_menu"/>

</android.support.v4.widget.DrawerLayout>