<?xml version="1.0" encoding="utf-8"?>
<!-- Comparisons fragment -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/product_input"
                android:layout_marginRight="5dp"
                android:labelFor="@+id/product_input"
                android:text="@string/product"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/product_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/search_icon"
                android:layout_toRightOf="@id/label"
                android:inputType="text"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/ic_search"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/desc_comparison"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="15sp"/>
    </RelativeLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/item_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/sc"
                android:src="@drawable/ic_shopping_cart"/>

            <TextView
                android:id="@+id/supermarket_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/item_icon"
                android:textColor="@color/primary_text"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/supermarket_name"
                android:layout_toRightOf="@+id/item_icon"
                android:textColor="@color/secondary_text"/>

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/date"
                android:layout_alignParentRight="true"
                android:textColor="@color/accent_dark"
                android:textSize="20sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/chart_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="gone">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

